--- a/config/crd/bases/etl.glassflow.io_pipelines.yaml
+++ b/config/crd/bases/etl.glassflow.io_pipelines.yaml
@@ -47,8 +47,22 @@ spec:
                 properties:
                   enabled:
                     type: boolean
+                  left_buffer_ttl:
+                    description: |-
+                      A Duration represents the elapsed time between two instants
+                      as an int64 nanosecond count. The representation limits the
+                      largest representable duration to approximately 290 years.
+                    format: int64
+                    type: integer
                   replicas:
                     minimum: 1
+                    type: integer
+                  right_buffer_ttl:
+                    description: |-
+                      A Duration represents the elapsed time between two instants
+                      as an int64 nanosecond count. The representation limits the
+                      largest representable duration to approximately 290 years.
+                    format: int64
                     type: integer
                   stream:
                     type: string
@@ -56,7 +70,9 @@ spec:
                     type: string
                 required:
                 - enabled
+                - left_buffer_ttl
                 - replicas
+                - right_buffer_ttl
                 - stream
                 - type
                 type: object
