--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -4,6 +4,10 @@ on:
       push:
         type: boolean
         description: push to dockerhub
+      pr_number:
+        type: string
+        description: PR number for RC tag generation
+        required: false
 
 jobs:
   build-docker-image:
@@ -70,6 +74,7 @@ jobs:
             type=sha,prefix=,format=long
             type=raw,value=main,enable=${{ github.ref_name == 'main' }}
             type=raw,value=stable,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            type=raw,value=rc-PR-${{ inputs.pr_number }},enable=${{ inputs.pr_number != '' }}
       - name: Login to ghcr
         uses: docker/login-action@v3
         with:
