--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -31,6 +31,7 @@ jobs:
     uses: ./.github/workflows/build-image.yml
     with:
       push: true
+      pr_number: ${{ github.event.number }}
     secrets: inherit
 
   test-chart:
